# universal-webview

./: .gitignore  CMakeLists.txt  README-CN.md  README.md  uw.config.json
example/system-api/: package-lock.json  package.json
example/system-api/src/: App.js  index.js
example/system-api/src/api/: eventBus.js  index.js
resource/: asset-manifest.json  index.html
resource/backend/: main.js  package.json
resource/backend/src/: main.js  module.js
resource/static/js/: 787.2f99236d.chunk.js  787.2f99236d.chunk.js.map  main.7ef4c058.js  main.7ef4c058.js.map  main.be3b70e5.js  main.be3b70e5.js.map
scripts/: build.sh  install_dependencies.sh  run.sh  test.sh
src/: CMakeLists.txt  main.cpp  uw.cpp
src/app/: CMakeLists.txt  application.hpp
src/config/: CMakeLists.txt  config.hpp  menu.hpp  window.hpp
src/container/: CMakeLists.txt  buffer.hpp
src/js/: js.hpp
src/sys/: CMakeLists.txt  sys.hpp
src/sys/clipboard/: CMakeLists.txt  clipboard.hpp  clipboard_event.hpp  clipboard_mac.mm
src/sys/fs/: fs.hpp
src/sys_api/: CMakeLists.txt  os.hpp  sys.hpp
src/sys_api/clipboard/: clipboard.hpp  clipboard_mac.mm
src/sys_api/fs/: fs.hpp
src/sys_api/notification/: notification.hpp  notification_mac.mm
src/util/: CMakeLists.txt  message.hpp  messageBus.hpp  messageHandler.hpp  util.cpp  util.hpp
src/window/: CMakeLists.txt  window.hpp  window_config.hpp
src/window/linux/: CMakeLists.txt  platform.hpp  window.cpp
src/window/mac/: CMakeLists.txt  app_controller.h  app_controller.mm  app_delegate.h  app_delegate.mm  evaluate_java_script.mm  menu.mm  message_handler.h  message_handler.mm  platform.hpp  platform.mm  scheme_handler.h  scheme_handler.mm  window.mm
src/window/mac/system_event/: app_event_register.1.h  app_event_register.1.mm  app_event_register.h  app_event_register.mm  clipboard_event_register.h  clipboard_event_register.mm  system_event.h  system_event.mm  system_event_handler.h
src/window/windows/: CMakeLists.txt  platform.hpp  window.cpp
test/: CMakeLists.txt  test.cpp
